--- a/Views/Customer/_Delete.cshtml
+++ b/Views/Customer/_Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoffeeCafe.Models.Customer
+﻿@*@model CoffeeCafe.Models.Customer
 
 @{
     ViewData["Title"] = "Delete";
@@ -67,3 +67,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+*@
