--- a/Views/Customer/_Edit.cshtml
+++ b/Views/Customer/_Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoffeeCafe.Models.Customer
+﻿@*@model CoffeeCafe.Models.Customer
 
 @{
     ViewData["Title"] = "Edit";
@@ -66,4 +66,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
